<resources>
    <string name="app_name">Eletric Car App</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="distancia_percorrida">Distancia percorrida</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="outra_tela">Outra Tela</string>
    <string name="hamburguer">Hamburguer</string>
    <string name="pizza">Pizza</string>
    <string name="compromisso_1">Compromisso 1</string>
    <string name="compromisso_2">Compromisso 2</string>
    <string name="ligar_lampada">Ligar Lampada</string>
    <string name="calcular">Calcular</string>
    <string name="no_wifi">Ops, internet não disponivel</string>
    <string name="response_error">Algo dey errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
    <string-array name="array_cidades">
        <item>Guarulhos</item>
        <item>São Paulo</item>
    </string-array>
</resources>