<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/gray"
            >

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_star"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/iv_carro_eletrico"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:src="@drawable/carro_eletrico"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_carro_eletrico"
                />

            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 120.000,00"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@+id/tv_preco"
                app:layout_constraintTop_toTopOf="@+id/tv_preco"
                />

            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_preco"
                />

            <TextView
                android:id="@+id/tv_bateria_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="93,4 kWh"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@+id/tv_bateria"
                app:layout_constraintTop_toTopOf="@+id/tv_bateria"
                />

            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/potencia"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bateria"
                />

            <TextView
                android:id="@+id/tv_potencia_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="646 cv"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@+id/tv_potencia"
                app:layout_constraintTop_toTopOf="@+id/tv_potencia"
                />

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_potencia"
                />

            <TextView
                android:id="@+id/tv_recarga_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23 min"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@+id/tv_recarga"
                app:layout_constraintTop_toTopOf="@+id/tv_recarga"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>